tests/Checker/everything/errors/6e.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *6: incompatible type for =
Compilation was unsuccessful.
